# CMAKEthings

./: .gitignore  README.md
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/include/: dog.h
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep008/source/src/: main.cpp
Ep011/: functions.cmake  list-option.cmake  loops.cmake  macros.cmake  messages.cmake  variables.cmake
Ep012/: CMakeLists.txt
Ep012/src/: information.cpp  main.cpp
Ep012/src/math/: CMakeLists.txt
Ep012/src/stats/: CMakeLists.txt
